part one done-ish.

--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -41,6 +41,7 @@ html div {
     float: left;
     height: 100%;
     width: 33%;
+    padding: 1%;
 }
 
 #shuffleDeck {
@@ -119,6 +120,34 @@ html div {
     float: left;
 }
 
-body {
-    background: rbga(0, 0, 0, .25);
+button#saveDeck,
+#saveDeckAs {
+    margin-left: 1%;
+    margin-top: 1.5%;
+}
+
+label,
+select,
+button {
+    margin-bottom: 1%;
+    line-height: 1em;
+}
+
+button#deleteDeck {
+    display: block;
+    margin-top: 2%;
+    float: left;
+}
+
+input#decknameInput {
+    float: left;
+    display: block;
+    width: 45%;
+    margin-left: 15%;
+}
+
+div#clearsortshufflewrapper {
+    overflow: auto;
+    width: 50%;
+    margin: 0 auto;
 }
