--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -22,13 +22,15 @@ html div {
     left: 0%;
     width: 60%;
     height: 38%;
+	border: 1px solid blue;
 }
 
 #cardDescription {
     top: 0%;
     left: 0%;
     width: 100%;
-    height: 61.2%;
+    height: 62%;
+	border: 1px solid red;
 }
 
 #searchBar {
@@ -42,6 +44,7 @@ html div {
     height: 100%;
     width: 33%;
     padding: 1%;
+	border: 1px solid yellow;
 }
 
 #shuffleDeck {
@@ -66,6 +69,7 @@ html div {
     float: right;
     height: 100%;
     width: 66%;
+	border: 1px solid orange;
 }
 
 #center {
