--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -6,18 +6,18 @@ html div {
     border: 1px solid black;
 }
 
-#mainContainer {
+.mainContainer {
     width: 100%;
     height: 100%;
 }
 
-#left {
+.left {
     height: 100%;
     float: left;
     width: 24%;
 }
 
-#cardimage {
+.cardimage {
     top: 0%;
     left: 0%;
     width: 60%;
@@ -25,7 +25,7 @@ html div {
     border: 1px solid blue;
 }
 
-#cardDescription {
+.cardDescription {
     top: 0%;
     left: 0%;
     width: 100%;
@@ -33,13 +33,13 @@ html div {
     border: 1px solid red;
 }
 
-#searchBar {
+.searchBar {
     float: right;
     width: 75.7%;
     height: 25%;
 }
 
-#searchLeft {
+.searchLeft {
     float: left;
     height: 100%;
     width: 33%;
@@ -47,53 +47,53 @@ html div {
     border: 1px solid yellow;
 }
 
-#shuffleDeck {
+.shuffleDeck {
     float: right;
     height: 15%;
     bottom: 0%;
 }
 
-#sortDeck {
+.sortDeck {
     float: right;
     height: 15%;
     bottom: 0%;
 }
 
-button#clearDeck {
+button.clearDeck {
     float: right;
     height: 15%;
     bottom: 0%;
 }
 
-#searchRight {
+.searchRight {
     float: right;
     height: 100%;
     width: 66%;
     border: 1px solid orange;
 }
 
-#monsterSelect {
+.monsterSelect {
     display: block;
     float: right;
     height: 15%;
     display: none;
 }
 
-#spellSelect {
+.spellSelect {
     display: block;
     float: right;
     height: 15%;
     display: none;
 }
 
-#trapSelect{
+.trapSelect{
     display: block;
     float: right;
     height: 15%;
     display: none;
 }
 
-select#typeSelect {
+select.typeSelect {
     display: block;
     float: left;
     height: 15%;
@@ -102,7 +102,7 @@ select#typeSelect {
     margin-top: 1.5%;
 }
 
-select#attributeSelect {
+select.attributeSelect {
     display: block;
     float: left;
     height: 15%;
@@ -111,7 +111,7 @@ select#attributeSelect {
     margin-top: 1.5%;
 }
 
-select#raceSelect {
+select.raceSelect {
     display: block;
     float: left;
     height: 15%;
@@ -120,7 +120,7 @@ select#raceSelect {
     margin-top: 1.5%;
 }
 
-select#setcodeSelect {
+select.setcodeSelect {
     display: block;
     float: left;
     height: 15%;
@@ -129,7 +129,7 @@ select#setcodeSelect {
     margin-top: 1.5%;
 }
 
-input#levelInput {
+input.levelInput {
     display: block;
     float: left;
     height: 15%;
@@ -138,7 +138,7 @@ input#levelInput {
     margin-top: 1.5%;
 }
 
-#raceSelect {
+.raceSelect {
     display: block;
     float: left;
     height: 15%;
@@ -147,7 +147,7 @@ input#levelInput {
     margin-top: 1.5%;
 }
 
-select#forbiddenLimitedSelect {
+select.forbiddenLimitedSelect {
     display: block;
     float: left;
     height: 15%;
@@ -156,7 +156,7 @@ select#forbiddenLimitedSelect {
     margin-top: 1.5%;
 }
 
-input#atkInput {
+input.atkInput {
     display: block;
     float: left;
     height: 15%;
@@ -165,7 +165,7 @@ input#atkInput {
     margin-top: 1.5%;
 }
 
-input#defInput {
+input.defInput {
     display: block;
     float: left;
     height: 15%;
@@ -174,7 +174,7 @@ input#defInput {
     margin-top: 1.5%;
 }
 
-input#nameInput {
+input.nameInput {
     display: block;
     float: left;
     height: 15%;
@@ -183,7 +183,7 @@ input#nameInput {
     margin-top: 1.5%;
 }
 
-#descInput {
+.descInput {
     display: block;
     float: left;
     height: 15%;
@@ -192,7 +192,7 @@ input#nameInput {
     margin-top: 1.5%;
 }
 
-button#clearForm {
+button.clearForm {
     display: block;
     float: left;
     height: 15%;
@@ -201,7 +201,7 @@ button#clearForm {
     margin-top: 1.5%;
 }
 
-input#scaleInput {
+input.scaleInput {
     display: block;
     float: left;
     height: 15%;
@@ -210,60 +210,60 @@ input#scaleInput {
     margin-top: 1.5%;
 }
 
-#center {
+.center {
     height: 74.5%;
     width: 50.5%;
     border: 1px solid red;
     float: left;
 }
 
-#mainDeck {
+.mainDeck {
     float: left;
     height: 66%;
     width: 100%;
     border: 1px solid blue;
 }
 
-#extraDeck {
+.extraDeck {
     float: left;
     height: 17.5%;
     width: 100%;
     border: 1px solid green;
 }
 
-#sideDeck {
+.sideDeck {
     float: left;
     height: 15.5%;
     width: 100%;
     border: 1px solid yellow;
 }
 
-#right {
+.right {
     float: right;
     height: 74.5%;
     width: 25%;
     border: 1px solid green;
 }
 
-#searchResults {
+.searchResults {
     height: 100%;
     width: 100%;
 }
 
-#maincontainer label {
+.maincontainer label {
     width: 33%;
     display: block;
     float: left;
 }
 
-#maincontainer select {
+.maincontainer select {
     width: 45%;
     display: block;
     float: left;
 }
 
-button#saveDeck,
-#saveDeckAs {
+button.saveDeck,
+.saveDeckAs {
     margin-left: 1%;
     margin-top: 1.5%;
 }
@@ -275,20 +275,20 @@ button {
     line-height: 1em;
 }
 
-button#deleteDeck {
+button.deleteDeck {
     display: block;
     margin-top: 2%;
     float: left;
 }
 
-input#decknameInput {
+input.decknameInput {
     float: left;
     display: block;
     width: 45%;
     margin-left: 15%;
 }
 
-div#clearsortshufflewrapper {
+div.clearsortshufflewrapper {
     overflow: auto;
     width: 50%;
     margin: 0 auto;
