--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -78,6 +78,10 @@ div.searchBlock select.trapSelect, div.searchBlock select.spellSelect, div.searc
     display: none;
 }
 
+label[for^="attribute"], label[for^="race"] {
+	display: none;
+}
+
 select.typeSelect {
     display: block;
     float: left;
