let there be color, removed black bars

--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 html div {
     border: 1px solid black;
 }
@@ -229,6 +225,10 @@ input.scaleInput {
     height: 100%;
     width: 100%;
 	overflow-y: auto;
+}
+
+div.resultDiv {
+    border: 1px solid yellow;
 }
 
 div.descriptionContainer span {
