Revert "let there be color, removed black bars"
This reverts commit 6c1faec36187df092ec9bc1fd85a244eb80307e5.

--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html div {
     border: 1px solid black;
 }
@@ -225,10 +229,6 @@ input.scaleInput {
     height: 100%;
     width: 100%;
 	overflow-y: auto;
-}
-
-div.resultDiv {
-    border: 1px solid yellow;
 }
 
 div.descriptionContainer span {
