--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -47,6 +47,7 @@ body {
     width: 33%;
     padding: 1%;
     border: 1px solid yellow;
+	overflow-y: auto;
 }
 
 .shuffleDeck {
@@ -72,7 +73,7 @@ button.clearDeck {
     height: 100%;
     width: 66%;
     border: 1px solid orange;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 div.searchBlock select.trapSelect,
@@ -91,12 +92,12 @@ div.searchBlock label[for^="race"] {
     display: none;
 }
 
-select.typeSelect {
+div.searchBlock select.typeSelect {
     display: block;
     float: left;
     height: 15%;
     width: 20%;
-    margin-left: 1%;
+    margin-left: -25%;
     margin-top: 1.5%;
 }
 
@@ -110,12 +111,12 @@ select.raceSelect {
     margin-top: 1.5%;
 }
 
-select.setcodeSelect {
+div.searchBlock select.setcodeSelect {
     display: block;
     float: left;
     height: 15%;
     width: 20%;
-    margin-left: 1%;
+    margin-left: -25%%;
     margin-top: 1.5%;
 }
 
@@ -124,7 +125,7 @@ input.levelInput {
     float: left;
     height: 15%;
     width: 20%;
-    margin-left: 1%;
+    margin-left: -20%;
     margin-top: 1.5%;
 }
 
@@ -137,47 +138,43 @@ input.levelInput {
     margin-top: 1.5%;
 }
 
-select.forbiddenLimitedSelect {
+div.searchBlock select.forbiddenLimitedSelect {
     display: block;
     float: left;
     height: 15%;
     width: 20%;
+    margin-left: -25%;
+    margin-top: 1.5%;
+}
+
+div.searchBlock input.atkInput {
+    display: block;
+    float: left;
+    width: 10%;
+    margin-left: -35%;
+    margin-top: 1.5%;
+}
+
+div.searchBlock input.defInput {
+    display: block;
+    float: left;
+    width: 10%;
+    margin-left: -35%;
+    margin-top: 1.5%;
+}
+
+div.searchBlock input.nameInput {
+    display: block;
+    float: left;
+    width: 10%;
     margin-left: 1%;
     margin-top: 1.5%;
 }
 
-input.atkInput {
+div.searchBlock input.descInput {
     display: block;
     float: left;
-    height: 15%;
-    width: 20%;
-    margin-left: 1%;
-    margin-top: 1.5%;
-}
-
-input.defInput {
-    display: block;
-    float: left;
-    height: 15%;
-    width: 20%;
-    margin-left: 1%;
-    margin-top: 1.5%;
-}
-
-input.nameInput {
-    display: block;
-    float: left;
-    height: 15%;
-    width: 20%;
-    margin-left: 1%;
-    margin-top: 1.5%;
-}
-
-.descInput {
-    display: block;
-    float: left;
-    height: 15%;
-    width: 20%;
+    width: 10%;
     margin-left: 1%;
     margin-top: 1.5%;
 }
@@ -191,11 +188,10 @@ button.clearForm {
     margin-top: 1.5%;
 }
 
-input.scaleInput {
+div.searchBlock input.scaleInput {
     display: block;
     float: left;
-    height: 15%;
-    width: 20%;
+    width: 10%;
     margin-left: 1%;
     margin-top: 1.5%;
 }
