--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1882,3 +1882,9 @@ audio#podcast {
 .web #news {
     height: 85;
 }
+
+.rankingcolumn {
+    width: 50%;
+    float: left;
+    padding: 0 21px;
+}
