--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -93,37 +93,31 @@ button.clearDeck {
 
 div.searchBlock select.raceSelect {
     float: right;
-    position: relative;
     z-index: -1;
 }
 
 div.searchBlock select.attributeSelect {
     float: right;
-    position: relative;
     z-index: 0;
 }
 
 div.searchBlock select.monsterTypeSelect {
     float: right;
-    position: relative;
     z-index: 1;
 }
 
 div.searchBlock select.monsterCardSelect {
     float: right;
-    position: relative;
     z-index: 2;
 }
 
 div.searchBlock select.spellSelect {
     float: right;
-    position: relative;
     z-index: 3;
 }
 
 div.searchBlock select.trapSelect {
     float: right;
-    position: relative;
     z-index: 4;
 }
 
@@ -137,6 +131,7 @@ div.searchBlock label[for^="race"] {
 div.searchBlock label[for^="typeSelect"] {
     float: left;
     clear: both;
+    position: relative;
     margin-top: 1.5%;
     margin-left: 6%;
 }
@@ -188,7 +183,6 @@ input.levelInput {
 
 div.searchBlock label[for^="scaleInput"] {
     float: left;
-    clear: both;
 }
 
 div.searchBlock input.scaleInput {
@@ -212,14 +206,14 @@ div.searchBlock label[for^="forbiddenLimitedSelect"] {
     float: right;
     clear: both;
     margin-right: 10%;
-    margin-top: -18%;
+    margin-top: -31%;
 }
 
 div.searchBlock select.forbiddenLimitedSelect {
     display: block;
     float: right;
     height: 14%;
-    width: 20%;
+    width: 75%;
     clear: both;
 }
 
@@ -227,42 +221,45 @@ div.searchBlock label[for^="atkInput"] {
     float: right;
     clear: both;
     margin-right: 10%;
-    margin-top: -14%;
+    margin-top: -26.5%;
 }
 
 div.searchBlock input.atkInput {
     display: block;
     float: right;
-    width: 15%;
+    width: 45%;
     height: 14%;
     clear: both;
+    margin-right: 30%;
 }
 
 div.searchBlock label[for^="defInput"] {
     float: right;
     clear: both;
     margin-right: 10%;
-    margin-top: -10%;
+    margin-top: -22%;
 }
 
 div.searchBlock input.defInput {
     display: block;
     float: right;
-    width: 15%;
+    width: 45%;
     height: 14%;
     clear: both;
+    margin-right: 30%;
 }
 
 div.searchBlock label[for^="nameInput"] {
-    float: left;
+    float: right;
     clear: both;
-    margin-left: 6%;
+    margin-top: -17.5%;
+    margin-right: 10%;
 }
 
 div.searchBlock input.nameInput {
     display: block;
     float: right;
-    width: 15%;
+    width: 75%;
     clear: both;
 }
 
@@ -282,10 +279,10 @@ div.searchBlock input.descInput {
 button.clearForm {
     display: block;
     float: right;
-    height: 14%;
-    width: 15%;
-    margin-right: 28%;
-    margin-top: -7%;
+    height: 34.5%;
+    width: 9%;
+    margin-right: 10%;
+    margin-top: -26.5%;
     clear: both;
 }
 
@@ -375,12 +372,12 @@ button.deleteDeck {
 button.searchButton {
     position: relative;
     z-index: 9001;
-    width: 12%;
-    height: 14%;
+    width: 33%;
+    height: 15%;
     float: right;
     clear: both;
-    margin-right: 31%;
-    margin-top: -3%;
+    margin-right: 10%;
+    margin-top: -13%;
 }
 
 input.decknameInput {
@@ -388,7 +385,7 @@ input.decknameInput {
     display: block;
     width: 45%;
     margin-left: 32%;
-    margin-top: -5%;
+    margin-top: -55%;
 }
 
 div.clearsortshufflewrapper {
