--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -399,6 +399,9 @@ div.clearsortshufflewrapper {
     border: 1px solid black;
 }
 
-.mainDeck img, .sideDeck img, .extraDeck img {
-    width: 66px;
+.mainDeck img {
+    width: 37%;
+}
+.sideDeck img, .extraDeck img {
+	width: 33%;
 }
