too much lag, half assed commit

--- a/server/http/css/deck-edit.css
+++ b/server/http/css/deck-edit.css
@@ -218,7 +218,7 @@ div.searchBlock label[for^="typeSelect"] {
 
 div.searchBlock select.typeSelect {
     display: block;
-    float: left;
+    float: right;
     height: 14%;
     width: 20%;
     clear: both;
